--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,12 @@ jobs:
     strategy:
       matrix:
         goos: [linux, windows]
-        goarch: [amd64, arm64]
+        goarch: [amd64, arm64, 386]
         exclude:
           - goos: windows
             goarch: arm64
+          - goos: windows
+            goarch: 386
 
     steps:
       - name: Checkout
